2009-05-21  Karl Runge <runge@karlrunge.com>
	* x11vnc: Thread safety improvements. Add 'OpenOffice' to special
	  case list for scroll detection.  Fix -clip mode under -rawfb.
	  Workaround Xorg bug that yields infinitely repeating keys
	  when 'xset r off' action is done with keys pressed. Env. var
	  X11VNC_IDLE_TIMEOUT.

2009-03-12  Karl Runge <runge@karlrunge.com>
	* x11vnc: Fix off-screen bug for -ncache_cr copyrect.

2009-03-07  Karl Runge <runge@karlrunge.com>
	* x11vnc: allow range for X11VNC_SKIP_DISPLAY, document grab
	  Xserver issue.  Add progress_client() to proceed more quickly
	  thru handshake.  Improvements to turbovnc hack.

2009-02-28  Karl Runge <runge@karlrunge.com>
	* x11vnc: add kludge to experiment with turbovnc.

2009-02-25  Karl Runge <runge@karlrunge.com>
	* x11vnc: fix some -QD cases for use in tkx11vnc.

2009-02-21  Karl Runge <runge@karlrunge.com>
	* x11vnc: add -noskip_lockkeys option for future use.

2009-02-03  Karl Runge <runge@karlrunge.com>
	* x11vnc: Add "sendbell" remote cmd.  Fix copyrect updates under
	  -reflect.  Workaround that checks valid window of selection
	  requestor.  Wait on some ssl helper pids earlier.  Workaround
	  XAUTHLOCALHOSTNAME for some new usage modes.  Set fake fb to
	  requested bpp with correct masks.  -padgeom once:... mode.
	  Set LIBXCB_ALLOW_SLOPPY_LOCK by default. rfbRandomBytes earlier.
	* classes/ssl: Update jars.  Add "TOP_" dropdown customization to
	  ultravnc java viewer applet FTP panel.

2009-01-11  Karl Runge <runge@karlrunge.com>
	* classes/ssl: Add configurable Ultra java applet Filexfer Drives
	  drop down (e.g. ftpDropDown=Home.Desktop.bin).  Document all  
	  applet parameters in classes/ssl/README.

2009-01-10  Karl Runge <runge@karlrunge.com>
	* x11vnc: fix failure of -8to24 on default depth 24 due to 
	  nonstandard indexed color support changes.  Fix small window
	  for failure after XSendEvent selection call; add env var.
	  X11VNC_SENDEVENT_SYNC=1 to take even more care.
