@@ -4031,6 +4031,11 @@ void print_help(int mode) {
 "                       window dragging.  Consider the -nodragging option if\n"
 "                       the problem is severe.\n"
 "\n"
+"                       The env. var. X11VNC_REFLECT_PASSWORD can be set to\n"
+"                       the password needed to log into the vnc host server, or\n"
+"                       to \"file:path_to_file\" to indicate a file containing\n"
+"                       the password as its first line.\n"
+"\n"
 "                       The VNC HOST mode implies -shared.  Use -noshared as\n"
 "                       a subsequent cmdline option to disable sharing.\n"
 "\n"
