@@ -47,7 +47,7 @@ int xtrap_base_event_type = 0;
 int xdamage_base_event_type = 0;
 
 /*               date +'lastmod: %Y-%m-%d' */
-char lastmod[] = "0.9.8 lastmod: 2009-05-18";
+char lastmod[] = "0.9.8 lastmod: 2009-06-14";
 
 /* X display info */
 
